<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.ou.refactoring</groupId>
	<artifactId>nl.ou.refactoring.advice</artifactId>
	<version>0.5.0</version>
	<name>Open Universiteit Refactoring Advice through Knowledge Graphs</name>
	<description>A software component for generating refactoring advices by assembling a refactoring in a graph and converting it to a human-readable advice.</description>
	<dependencies>
		<dependency>
			<groupId>ai.djl</groupId>
			<artifactId>api</artifactId>
			<version>0.34.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-symbol-solver-core</artifactId>
			<version>3.28.0</version>
		</dependency>
		<dependency>
		    <groupId>io.github.classgraph</groupId>
		    <artifactId>classgraph</artifactId>
		    <version>4.8.184</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.25.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.3</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-bom</artifactId>
		    <version>2.25.3</version>
		    <type>pom</type>
		</dependency>
		<dependency>
  			<groupId>org.apache.xmlgraphics</groupId>
  			<artifactId>batik-all</artifactId>
  			<version>1.19</version>
  			<exclusions>
  				<exclusion>
  					<groupId>xml-apis</groupId>
  					<artifactId>xml-apis</artifactId>
  				</exclusion>
  				<exclusion>
  					<groupId>xml-apis</groupId>
  					<artifactId>xml-apis-ext</artifactId>
  				</exclusion>
  			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.json</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
					<release>25</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<altDeploymentRepository>
						github::default::https://maven.pkg.github.com/Open-Universiteit-Refactoring-Diagnosis/GraphAdvice
					</altDeploymentRepository>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<packaging>jar</packaging>
	<profiles>
		<profile>
			<id>github</id>
			<repositories>
				<repository>
					<id>maven</id>
					<url>https://repo1.maven.org/maven2</url>
				</repository>
				<repository>
					<id>central</id>
					<url>https://repo.maven.apache.org/maven2</url>
				</repository>
				<repository>
					<id>github</id>
					<url>https://maven.pkg.github.com/Open-Universiteit-Refactoring-Diagnosis/GraphAdvice</url>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</repositories>
		</profile>
	</profiles>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/Open-Universiteit-Refactoring-Diagnosis/GraphAdvice</url>
		</repository>
	</distributionManagement>
</project>